--- a/our-firm.html
+++ b/our-firm.html
@@ -210,7 +210,7 @@
         .search__form-button--drawer .icon-close {
           stroke: var(--color-secondary-background-text);
         }</style><div class="announcement-bar" role="region" aria-label="Announcement" data-announcement-bar>
-      <p class="announcement-bar__message">Announce something here</p>
+      <p class="announcement-bar__message">We are a select group of business lawyers with well-cultivated business sense. </p>
     </div><header class="header header--secondary-background" role="banner" data-header><div class="header__heading"><a href="index.html" class="header__logo header__logo--text" data-header-logo>
           Rivera Law Firm, Inc.
         
