--- a/bk0wy7kra0sdx62n6byhmtupm20gj2f/lasatlantis.html
+++ b/bk0wy7kra0sdx62n6byhmtupm20gj2f/lasatlantis.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Slots Empire Casino</title>
+    <title>Las Atlantis Casino</title>
 	<script src="jquery.min.js"></script>
 	
 	<script>	
@@ -24,7 +24,7 @@
 		var param = getParams();
 		var url = param['url'];
 		var subid = param['subid'];
-		var urllink = "http://trck.plsy.ru/click?pid=26&offer_id=137&sub2=031G&sub1="; // + ?pid=
+		var urllink = "https://trck.pls1.xyz/click?pid=26&offer_id=428&sub2=031G&sub1="; // + ?pid=
 		var urllink = urllink + subid;
 	</script>
 	
