--- a/bk0wy7kra0sdx62n6byhmtupm20gj2f/index.html
+++ b/bk0wy7kra0sdx62n6byhmtupm20gj2f/index.html
@@ -363,7 +363,7 @@
 								<div class="inner-Tabsec Left" style="background: #000;">
 								  <div class="row no-gutters align-items-center">
 									<div class="col-md-12 rat-Hidsec2">
-									  <div class="top-Rating top-3">
+									  <div class="top-Rating">
 										<span>4</span>
 									  </div>
 									</div>
